--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -34,6 +34,7 @@ tmm.clearurlcache=Url Cache löschen
 tmm.clearimagecache=Bilder Cache löschen
 tmm.rebuildimagecache=Bildercache neu aufbauen
 tmm.cleardatabase=Datenbank neu aufbauen
+tmm.cleardatabase.hint=Achtung\: Es wird die komplette Datenbank gelöscht und eine Leere neu angelegt. Weitermachen?
 tmm.cleardatabase.info=Datenbank initialisiert. Bitte tinyMediaManager neu starten.
 tmm.cleardatabase.error=Ein Fehler ist beim initialisieren aufgetreten. Bitte die Datei 'tmm.odb' selbst löschen.
 tmm.gotoinstalldir=TMM Verzeichnis im Dateibrowser öffnen
@@ -69,6 +70,8 @@ movie.scrape.unscraped.desc=Alle ungescrapten Filme suchen & scrapen - nimm best
 movie.scrape.metadata=Metadaten von ausgewählten Filmen scrapen
 movie.scrape.metadata.desc=Metadaten von ausgewählten Filmen scrapen
 movie.scrape.nomatchfound=Kein entsprechender Film bei der Suche gefunden
+movie.scrape.toosimilar=Titel unterscheiden sich zuwenig - kann nicht entscheiden welchen zu nehmen.
+movie.scrape.toolowscore=Suchergebnisbewertung war zu niedrig (<0.75), nehme Ergebnis nicht her.
 movie.remove=Ausgewählte Filme entfernen
 movie.rename=Umbenennen / Cleanup ausgewählter Filme
 movie.updatemediainfo=Medianinformationen aus ausgewählten Filmen neu einlesen
@@ -243,13 +246,14 @@ Settings.renamer.folder=Verzeichnis
 Settings.renamer.file=Dateiname
 Settings.cleanupoptions=Cleanup Optionen
 Settings.renamer.removenfo=alle anderen NFOs entfernen
+Settings.renamer.moviesetsinglemovie=Erzeuge MovieSet Ordner auch dann an, wenn nur ein Film enthalten ist.
 Settings.example=Beispiel
 Settings.imagecacheimport=Bildercache beim Import aufbauen
 Settings.imagecacheimporthint=Achtung\: das Aufbauen des Caches könnte eine Weile dauern
 Settings.devicename=Gerätename
 Settings.macaddress=MAC Adresse
 
-Settings.movie.renamer.info=Verfügbare Werte\n$T \= Titel\n$O \= Original Titel\n$1 \= Erster Buchstabe des Titels\n$E \= Titel sortiert\n$2 \= Erster Buchstabe des sortierten Titels\n$Y \= Jahr\n$M \= Filmset Titel (sortiert)\n$N \= Filmset Titel\n$I \= IMDB Nummer\n$C \= Altersbeschränkung\n$R \= Video Auflösung\n$A \= Audio Codec + Kanäle\n$V \= Video Codec + Format
+Settings.movie.renamer.info=Verfügbare Werte\n$T \= Titel\n$O \= Original Titel\n$1 \= Erster Buchstabe des Titels\n$E \= Titel sortiert\n$2 \= Erster Buchstabe des sortierten Titels\n$Y \= Jahr\n$M \= Filmset Titel (sortiert)\n$N \= Filmset Titel\n$I \= IMDB Nummer\n$C \= Altersbeschränkung\n$R \= Video Auflösung\n$A \= Audio Codec + Kanäle\n$V \= Video Codec + Format\n$F \= Video Format
 Settings.movie.renamer.example=Wähle die Namensvorlage für Dateien und Ordner.\nWenn leer, wird das Umbenennen übersprungen.
 Settings.movie.renamer.nomovie=brauche wenigstens einen (gescrapten) Film für die Vorschau
 Settings.movie.renamer.spacesubstitution=Leerzeichen ersetzen durch
@@ -280,6 +284,7 @@ tvshow.update=ausgewählte TV Show(s) updaten
 tvshow.rewritenfo=NFO für ausgewählte TV Show(s) neu schreiben
 tvshow.rename=Umbenennen / Cleanup ausgewählter TV Shows / Episoden
 tvshow.clearimagecache=Den Bildercache für ausgewählte Serien/Episoden löschen
+tvshow.renamer.failedrename=Konnte Episode {} nicht umbenennen. Ungültige Saison- und/oder Episodennummer.
 
 tvshowepisode.scrape=Scrape Episoden Metadaten
 tvshowepisode.clone=Episode kopieren
