--- a/tinyMediaManager/locale/messages_nl.properties
+++ b/tinyMediaManager/locale/messages_nl.properties
@@ -34,6 +34,7 @@ tmm.clearurlcache=Wis url cache
 tmm.clearimagecache=wis afbeelding cache
 tmm.rebuildimagecache=Hercreëer afbeelding cache
 tmm.cleardatabase=Database initialiseren
+tmm.cleardatabase.hint=Voorzichtig\: Dit zal de gehele database verwijderen om met een nieuwe te beginnen. Doorgaan?
 tmm.cleardatabase.info=Database geïnitialiseerd. Herstart tinyMediaManager.
 tmm.cleardatabase.error=Database initialisatie veroorzaakte een fout. Verwijder bestand tmm.odb handmatig
 tmm.gotoinstalldir=Open tMM installatie map in verkenner
@@ -69,6 +70,8 @@ movie.scrape.unscraped.desc=Zoek & scrape alle nieuwe film(s) zonder interactie;
 movie.scrape.metadata=Scrape metadata voor geselecteerd film(s)
 movie.scrape.metadata.desc=Scrape metadata voor geselecteerd film(s)
 movie.scrape.nomatchfound=Geen geschikte film gevonden tijdens het zoeken
+movie.scrape.toosimilar=Film titels lijken teveel op elkaar - Kan niet beslissen welke te gebruiken
+movie.scrape.toolowscore=Gelijkenis score was te laag (<0.75) dus dit resultaat wordt niet gebruikt
 movie.remove=Verwijder geselecteerd film(s)
 movie.rename=Geselecteerde film(s) hernoemen/opschonen 
 movie.updatemediainfo=Media informatie van geselecteerde film(s) bijwerken
@@ -243,13 +246,14 @@ Settings.renamer.folder=Map naam
 Settings.renamer.file=Bestandsnaam
 Settings.cleanupoptions=Opschoon opties
 Settings.renamer.removenfo=wis alle andere NFO's
+Settings.renamer.moviesetsinglemovie=Maak ook een filmset map voor filmsets met maar één film
 Settings.example=Voorbeeld
 Settings.imagecacheimport=Creëer afbeelding cache tijdens import 
 Settings.imagecacheimporthint=Attentie\: dit neemt enige tijd in beslag en werkt alleen als afbeelding cache is geactiveerd
 Settings.devicename=Apparaat naam
 Settings.macaddress=MAC adres
 
-Settings.movie.renamer.info=Beschikbare methodes\:\n$T \= Titel\n$O \= Originele titel\n$1 \= Eerste letter van titel\n$E \= Sorteer titel\n$2 \= Eerste letter van Sorteer titel\n$Y \= Jaar\n$M \= Filmset titel (sorteer titel)\n$N \= Filmset titel\n$I \= IMDB nummer\n$C \= Certificering\n$R \= Video resolutie\n$A \= Audio code + kanalen\n$V \= Video code + formaat
+Settings.movie.renamer.info=Beschikbare methodes\:\n$T \= Titel\n$O \= Originele titel\n$1 \= Eerste letter van titel\n$E \= Sorteer titel\n$2 \= Eerste letter van Sorteer titel\n$Y \= Jaar\n$M \= Filmset titel (sorteer titel)\n$N \= Filmset titel\n$I \= IMDB nummer\n$C \= Certificering\n$R \= Video resolutie\n$A \= Audio code + kanalen\n$V \= Video code + formaat\n$F \= video formaat
 Settings.movie.renamer.example=Kies een hernoem patroon voor de map en bestand \nHernoemen wordt overgeslagen bij lege velden\!
 Settings.movie.renamer.nomovie=tenmiste één film is nodig voor het voorbeeld
 Settings.movie.renamer.spacesubstitution=Vervang spaties door
@@ -280,6 +284,7 @@ tvshow.update=Update geselecteerde TV serie(s)
 tvshow.rewritenfo=Herschrijf NFO voor geselecteerde TV serie(s)
 tvshow.rename=Geselecteerde TV serie(s)/aflevering(en) hernoemen/opschonen
 tvshow.clearimagecache=Wis afbeelding cache voor geselecteerde TV serie(s)/aflevering(en)
+tvshow.renamer.failedrename=Mislukt om aflevering {} te hernoemen - ongeldig seizoen en/of aflevering nummer
 
 tvshowepisode.scrape=Metadata aflevering scrapen
 tvshowepisode.clone=Dupliceer aflevering
