--- a/tinyMediaManager/locale/messages_pt.properties
+++ b/tinyMediaManager/locale/messages_pt.properties
@@ -34,6 +34,7 @@ tmm.clearurlcache=limpar cache de url
 tmm.clearimagecache=limpar cache de imagem
 tmm.rebuildimagecache=reconstruir cache de imagem
 tmm.cleardatabase=Inicializar base de dados
+# tmm.cleardatabase.hint=Be careful\: this will remove the complete database to start with a new one. Proceed?
 tmm.cleardatabase.info=Base de dados inicializada. Por favor reinicie o tinyMediaManager
 tmm.cleardatabase.error=Um erro ocorreu na inicialização da base de dados. Por favor apague o arquivo tmm.odb manualmente
 tmm.gotoinstalldir=Abrir diretório do tMM no gerenciador de arquivos
@@ -69,6 +70,8 @@ movie.scrape.unscraped.desc=Buscar e atualizar todos os filmes sem informações
 movie.scrape.metadata=Buscar dados para filme(s) selecionado(s)
 movie.scrape.metadata.desc=Buscar dados para filme(s) selecionado(s)
 movie.scrape.nomatchfound=Nenhum filme encontrado na busca
+# movie.scrape.toosimilar=Movie titles are too similar - can't decide which to use
+# movie.scrape.toolowscore=Matching score was too low (<0.75) so we are not taking this result
 movie.remove=Remover filme(s) selecionado(s)
 movie.rename=Renomear/limpar filme(s) selecionado(s)
 movie.updatemediainfo=Atualizar informação de mídia do(s) filme(s) selecionado(s)
@@ -243,13 +246,14 @@ Settings.renamer.folder=Nome diretório
 Settings.renamer.file=Nome arquivo
 Settings.cleanupoptions=Opções de limpeza
 Settings.renamer.removenfo=remover todos NFOs
+# Settings.renamer.moviesetsinglemovie=Also create movieset folder for moviesets with only one movie
 Settings.example=Exemplo
 Settings.imagecacheimport=Criar cache de imagem na importação
 Settings.imagecacheimporthint=Atenção\: isto pode demorar. Funciona somente se o cache de imagem estiver habilitado
 Settings.devicename=Nome do dispositivo
 Settings.macaddress=MAC address
 
-# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movieset title (sort title)\r\n$N \= Movieset title\r\n$I \= IMDB number\r\n$C \= Certification\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format
+# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movieset title (sort title)\r\n$N \= Movieset title\r\n$I \= IMDB number\r\n$C \= Certification\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format\r\n$F \= video format
 Settings.movie.renamer.example=Escolha um arquivo e padrão p/ renomear\nSe o campo estiver em branco, não serão renomeados
 Settings.movie.renamer.nomovie=pelo menos um filme é necessário como exemplo
 Settings.movie.renamer.spacesubstitution=Substituir espaços por
@@ -280,6 +284,7 @@ tvshow.update=Atualizar o(s) Programa(s) de TV selecionado(s)
 tvshow.rewritenfo=Reescrever NFO p/ Programa(s) de Tv selecionado(s)
 tvshow.rename=Renomear/limpar programa(s) de TV selecionado(s)
 tvshow.clearimagecache=Limpar cache de imagem para o(s) Programa(s) de TV/Episódio(s) selecionado(s)
+# tvshow.renamer.failedrename=Failed to rename episode {} - invalid season and/or episode number
 
 tvshowepisode.scrape=Pesquisar dados do episódio
 tvshowepisode.clone=Duplicar episódio
