--- a/tinyMediaManager/locale/messages_fr.properties
+++ b/tinyMediaManager/locale/messages_fr.properties
@@ -1,4 +1,3 @@
-# Buttons
 Button.ok=approuvé
 Button.cancel=annuler
 Button.add=Ajouter
@@ -35,14 +34,18 @@ tmm.cache=Cache
 # tmm.clearimagecache=clear image cache
 # tmm.rebuildimagecache=rebuild image cache
 tmm.cleardatabase=Initialiser la base de données
+# tmm.cleardatabase.hint=Be careful\: this will remove the complete database to start with a new one. Proceed?
 tmm.cleardatabase.info=Base de données initialisées. Merci de redémarrer tinyMediaManager
 tmm.cleardatabase.error=Une erreur est survenue durant l'initialisation de la base de données. Merci de supprimer le fichier tmm.odb manuellement
 # tmm.gotoinstalldir=Open tMM install directory in a file browser
 tmm.debug=Debuggage
+# tmm.tools=Tools
 tmm.about=A propos
+# tmm.contact=Contact us
 tmm.donate=Donner
 tmm.searchfield=Recherche...
 tmm.errorlogs=Montrer les logs d'erreur
+# tmm.wakeonlandevice=Wake on LAN device
 
 status.activethreads=Opérations actives
 # status.queuesize=Queue\:
@@ -51,7 +54,8 @@ status.activethreads=Opérations actives
 onlyoneoperation=Une seule opération à un seul instant est autorisée
 # update.datasource=Update data sources
 # update.datasource.unavailable=Datasource {} not available - skipping
-# update.datasource.movieinroot=Found file '{}' in datasource root - this is NOT supported (move to separate folder to get this imported\!)
+# update.datasource.movieinroot=Found file '{}' in a directory containing more than one movie. To get this imported, please activate the 'Allow multiple movies per folder' feature in movie settings (read carefully\!)
+# update.datasource.episodeinroot=Found file '{}' in the root directory of the data source. To get this imported, move it to its own directory\!
 # export.detail=Template contains detail pages
 # export.setdestination=Set export destination
 # export.selectdirectory=select export directory
@@ -66,12 +70,15 @@ edit.discard=Annuler les changements
 # movie.scrape.metadata=Scrape metadata for selected movie(s)
 # movie.scrape.metadata.desc=Scrape metadata for selected movie(s)
 # movie.scrape.nomatchfound=No suitable movie found during search
+# movie.scrape.toosimilar=Movie titles are too similar - can't decide which to use
+# movie.scrape.toolowscore=Matching score was too low (<0.75) so we are not taking this result
 movie.remove=Supprimer le(s) film(s) sélectionné(s)
 # movie.rename=Rename/cleanup selected movie(s)
 movie.updatemediainfo=Mise à jour des informations de(s) film(s) sélectionné(s)
 # movie.bulkedit=Bulk editing
 # movie.bulkedit.desc=Change genres, tags, movieset and watched flag for all selected movies
 movie.rewritenfo=Réécriture des NFO pour le(s) film(s) sélectionné(s)
+# movie.clearimagecache=Clear image cache for selected movie(s)
 
 movie.export=Exporter le(s) film(s) sélectionné(s)
 
@@ -176,6 +183,7 @@ Settings.movies=Films
 # Settings.tvshow=Tv Shows
 # Settings.tvshowscraper=<html><center>Tv Shows -<br>Scraper</center></html>
 Settings.general=Général
+# Settings.externaldevices=<html>External<br>devices</html>
 
 # general settings
 Settings.proxy=Paramètres du proxy
@@ -224,6 +232,8 @@ Settings.movie.datasource=Sources de données
 # Settings.datasource.folderchooser=Add datasource
 Settings.datasource.remove=Supprimer la source de données
 
+# Settings.multipleMovies=Allow multiple movies per folder
+# Settings.multipleMovies.hint=BE AWARE\: this option will allow you to import multiple movies per folder.\nEnabling this will cause some side effects\: you are no longer be able to\nchoose any specific file naming or use extrafanart/extrathumbs.\nUSING MULTIPLE MOVIES PER FOLDER IS NOT RECOMMENDED\!
 Settings.nfoFormat=NFO format
 Settings.nofFileNaming=NFO file naming
 # Settings.videofiletypes=Video filetypes
@@ -236,9 +246,14 @@ Settings.renamer.folder=Nom du répertoire
 Settings.renamer.file=Nom du fichier
 # Settings.cleanupoptions=Cleanup options
 # Settings.renamer.removenfo=remove all other NFOs
+# Settings.renamer.moviesetsinglemovie=Also create movieset folder for moviesets with only one movie
 Settings.example=Exemple
+# Settings.imagecacheimport=Build image cache on import
+# Settings.imagecacheimporthint=Attention\: this may take a while. Works only if the image cache is enabled
+# Settings.devicename=Device name
+# Settings.macaddress=MAC address
 
-# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movieset title (sort title)\r\n$N \= Movieset title\r\n$I \= IMDB number\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format
+# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movieset title (sort title)\r\n$N \= Movieset title\r\n$I \= IMDB number\r\n$C \= Certification\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format\r\n$F \= video format
 # Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nIf fields are empty, the renaming will be skipped\!
 # Settings.movie.renamer.nomovie=at least one movie is needed for the example
 # Settings.movie.renamer.spacesubstitution=Replace spaces with
@@ -268,6 +283,8 @@ Settings.tvshow.renamer.example=à faire
 # tvshow.update=Update selected TV show(s)
 # tvshow.rewritenfo=Rewrite NFO for selected TV show(s)
 # tvshow.rename=Rename/cleanup selected TV show(s)/episode(s)
+# tvshow.clearimagecache=Clear image cache for selected TV show(s)/episode(s)
+# tvshow.renamer.failedrename=Failed to rename episode {} - invalid season and/or episode number
 
 # tvshowepisode.scrape=Scrape episode metadata
 tvshowepisode.clone=Cloner l'épisode
@@ -415,6 +432,9 @@ message.database.loadmovies=Impossible de charger un film de la base de données
 message.erroropenfile=impossible d'ouvrir le fichier {} {}
 message.erroropenfolder=Impossible d'ouvrir le répertoire {} {}
 message.erroropenurl=Impossible d'ouvrir l'URL {} {}
+
+# message.missingitems=Please fill out all required fields
+# message.invalidmac=Invalid MAC address. It has to be in the following format\: AA\:BB\:CC\:DD\:EE\:FF
 
 # tree.collapseall=Collapse all nodes
 # tree.expandall=Expand all nodes
