more internationalization for tv show settings

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -265,6 +265,11 @@ Settings.tvshow.renamer.example=ToDo
 Settings.tvshowdatasource=TV show datasources
 Settings.tvshowdatasource.folderchooser=add TV show datasource
 Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, all TV shows and episodes inside this path will be removed from the database. Continue?
+Settings.tvshowseasontofilename=add season to filename
+Settings.tvshowtofilename=add TV show name to filename
+Settings.tvshowepisodetofilename=add episode title to filename
+Settings.tvshowseasonfoldername=season folder name
+Settings.tvshowseasonhint=$1 - Season number\n$2 - Season number with at least 2 digits
 
 # tv shows
 tvshow.scrape.newitems=Scrape new items
