added filter options for video/audio codec wording

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -302,6 +302,7 @@ metatag.actors=Actors
 metatag.aired=Aired
 metatag.artwork=Artwork
 metatag.audio=Audio
+metatag.audiocodec=Audio codec
 metatag.cast=Cast
 metatag.certification=Certification
 metatag.codec=Codec
@@ -359,6 +360,7 @@ metatag.tvshows=TV shows
 metatag.trailer=Trailer
 metatag.url=Url
 metatag.video=Video
+metatag.videocodec=Video codec
 metatag.watched=Watched
 metatag.writer=Writer
 metatag.year=Year
