--- a/tinyMediaManager/locale/messages_cs.properties
+++ b/tinyMediaManager/locale/messages_cs.properties
@@ -265,6 +265,11 @@ Settings.tvshow.renamer.example=Zbývá dodělat
 Settings.tvshowdatasource=Zdroje dat pro seriály
 Settings.tvshowdatasource.folderchooser=přidej zdroj dat pro seriály
 Settings.tvshowdatasource.remove.info=Jestliže odstaníte %s ze zdrojů dat, všechny seriály a epizody v této cestě budou odstraněny z databáze. Pokračovat ?
+# Settings.tvshowseasontofilename=add season to filename
+# Settings.tvshowtofilename=add TV show name to filename
+# Settings.tvshowepisodetofilename=add episode title to filename
+# Settings.tvshowseasonfoldername=season folder name
+# Settings.tvshowseasonhint=$1 - Season number\n$2 - Season number with at least 2 digits
 
 # tv shows
 tvshow.scrape.newitems=Stáhni data pro nové položky
@@ -297,6 +302,7 @@ metatag.actors=Herci
 metatag.aired=Vysíláno
 metatag.artwork=Artwork
 metatag.audio=Zvuk
+# metatag.audiocodec=Audio codec
 metatag.cast=Obsazení
 metatag.certification=Certifikace
 metatag.codec=Kodek
@@ -354,6 +360,7 @@ metatag.tvshows=Seriály
 metatag.trailer=Trailer
 metatag.url=Url
 metatag.video=Video
+# metatag.videocodec=Video codec
 metatag.watched=Shlédnuto
 metatag.writer=Autor
 metatag.year=Rok
@@ -466,7 +473,7 @@ Genres.HISTORY = Historický
 Genres.HOLIDAY = Prázdninový
 Genres.HORROR = Horror
 Genres.INDIE = Nezávislý
-Genres.MUSIC = hudební
+Genres.MUSIC = Hudební
 Genres.MUSICAL = Muzikál
 Genres.MYSTERY = Mysteriózní
 Genres.NEO_NOIR = Neo Noir
