--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -265,6 +265,11 @@ Settings.tvshow.renamer.example=ToDo
 Settings.tvshowdatasource=TV Show Ordner
 Settings.tvshowdatasource.folderchooser=neuen TV Show Ordner hinzufügen
 Settings.tvshowdatasource.remove.info=Wenn du %s von den Datenordnern entfernst, werden alle TV Shows und Episoden in diesem Pfad aus der Datenbank entfernt. Weitermachen?
+Settings.tvshowseasontofilename=Saisonnummer dem Dateinamen hinzufügen
+Settings.tvshowtofilename=TvShow Name dem Dateinamen hinzufügen
+Settings.tvshowepisodetofilename=Episodentitle dem Dateinamen hinzufügen
+Settings.tvshowseasonfoldername=Saison Ordnername
+Settings.tvshowseasonhint=$1 - Saison Nummer\n$2 - Saison Nummer mit 2 Stellen
 
 # tv shows
 tvshow.scrape.newitems=Neu gefundene Dateien scrapen
@@ -297,6 +302,7 @@ metatag.actors=Schauspieler
 metatag.aired=Erstausstrahlung
 metatag.artwork=Artwork
 metatag.audio=Audio
+metatag.audiocodec=Audio codec
 metatag.cast=Besetzung
 metatag.certification=Altersbeschränkung
 metatag.codec=Codec
@@ -354,6 +360,7 @@ metatag.tvshows=TV Shows
 metatag.trailer=Film Trailer
 metatag.url=Url
 metatag.video=Video
+metatag.videocodec=Video codec
 metatag.watched=bereits angesehen
 metatag.writer=Drehbuch
 metatag.year=Jahr
