--- a/tinyMediaManager/locale/messages_fr.properties
+++ b/tinyMediaManager/locale/messages_fr.properties
@@ -265,6 +265,11 @@ Settings.tvshow.renamer.example=à faire
 # Settings.tvshowdatasource=TV show datasources
 # Settings.tvshowdatasource.folderchooser=add TV show datasource
 # Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, all TV shows and episodes inside this path will be removed from the database. Continue?
+# Settings.tvshowseasontofilename=add season to filename
+# Settings.tvshowtofilename=add TV show name to filename
+# Settings.tvshowepisodetofilename=add episode title to filename
+# Settings.tvshowseasonfoldername=season folder name
+# Settings.tvshowseasonhint=$1 - Season number\n$2 - Season number with at least 2 digits
 
 # tv shows
 # tvshow.scrape.newitems=Scrape new items
@@ -297,6 +302,7 @@ metatag.actors=Acteurs
 # metatag.aired=Aired
 # metatag.artwork=Artwork
 metatag.audio=Audio
+# metatag.audiocodec=Audio codec
 # metatag.cast=Cast
 metatag.certification=Certification
 metatag.codec=Codec
@@ -354,6 +360,7 @@ metatag.title=Titre
 metatag.trailer=Bande annonce
 metatag.url=Url
 metatag.video=Vidéo
+# metatag.videocodec=Video codec
 # metatag.watched=Watched
 # metatag.writer=Writer
 metatag.year=Année
@@ -478,7 +485,7 @@ Genres.SCIENCE_FICTION = Science-fiction
 Genres.SERIES = Séries
 # Genres.SHORT = Short
 # Genres.SILENT_MOVIE = Silent Movie
-Genres.SPORT = sport
+Genres.SPORT = Sport
 # Genres.SPORTING_EVENT = Sports Event
 # Genres.SPORTS_FILM = Sports Film
 Genres.SUSPENSE = Suspens
