--- a/tinyMediaManager/locale/messages_nl.properties
+++ b/tinyMediaManager/locale/messages_nl.properties
@@ -265,6 +265,11 @@ Settings.tvshow.renamer.example=Te doen
 Settings.tvshowdatasource=TV show databronnen
 Settings.tvshowdatasource.folderchooser=TV show databron toevoegen
 Settings.tvshowdatasource.remove.info=Als je %s van de databronnen verwijderd worden alle TV Series en afleveringen binnen dit pad uit de database verwijderd. Doorgaan?
+Settings.tvshowseasontofilename=Voeg seizoen aan bestandsnaam toe
+Settings.tvshowtofilename=voeg TV serie naam aan bestandsnaam toe
+Settings.tvshowepisodetofilename=voeg aflevering titel toe aan bestandsnaam
+Settings.tvshowseasonfoldername=seizoen map naam
+Settings.tvshowseasonhint=$1 - Seizoen nummer\n$2 - Seizoen nummer met minstens 2 cijfers
 
 # tv shows
 tvshow.scrape.newitems=Scrape nieuwe onderdelen
@@ -297,6 +302,7 @@ metatag.actors=Acteurs
 metatag.aired=Uitgezonden
 metatag.artwork=Artwork
 metatag.audio=Audio
+metatag.audiocodec=Audio codec
 metatag.cast=Cast
 metatag.certification=Cerftificatie
 metatag.codec=Codec
@@ -354,6 +360,7 @@ metatag.tvshows=TV series
 metatag.trailer=Trailer
 metatag.url=Url
 metatag.video=Video
+metatag.videocodec=Video codec
 metatag.watched=Bekeken
 metatag.writer=Schrijver
 metatag.year=Jaar
