--- a/tinyMediaManager/locale/messages_pt.properties
+++ b/tinyMediaManager/locale/messages_pt.properties
@@ -34,14 +34,14 @@ tmm.clearurlcache=limpar cache de url
 tmm.clearimagecache=limpar cache de imagem
 tmm.rebuildimagecache=reconstruir cache de imagem
 tmm.cleardatabase=Inicializar base de dados
-# tmm.cleardatabase.hint=Be careful\: this will remove the complete database to start with a new one. Proceed?
+tmm.cleardatabase.hint=Cuidado\: isto irá remover a base de dados e iniciar uma nova. Prosseguir?
 tmm.cleardatabase.info=Base de dados inicializada. Por favor reinicie o tinyMediaManager
 tmm.cleardatabase.error=Um erro ocorreu na inicialização da base de dados. Por favor apague o arquivo tmm.odb manualmente
 tmm.gotoinstalldir=Abrir diretório do tMM no gerenciador de arquivos
 tmm.debug=Depurar
-# tmm.tools=Tools
+tmm.tools=Ferramentas
 tmm.about=Sobre
-# tmm.contact=Contact us
+tmm.contact=Contato
 tmm.donate=Doar
 tmm.searchfield=Buscar...
 tmm.errorlogs=Mostrar log de erros
@@ -70,8 +70,8 @@ movie.scrape.unscraped.desc=Buscar e atualizar todos os filmes sem informações
 movie.scrape.metadata=Buscar dados para filme(s) selecionado(s)
 movie.scrape.metadata.desc=Buscar dados para filme(s) selecionado(s)
 movie.scrape.nomatchfound=Nenhum filme encontrado na busca
-# movie.scrape.toosimilar=Movie titles are too similar - can't decide which to use
-# movie.scrape.toolowscore=Matching score was too low (<0.75) so we are not taking this result
+movie.scrape.toosimilar=Títulos muito similares - não consigo decidir qual usar
+movie.scrape.toolowscore=A pontuação foi muito baixa (<0.75) então não consideraremos este resultado
 movie.remove=Remover filme(s) selecionado(s)
 movie.rename=Renomear/limpar filme(s) selecionado(s)
 movie.updatemediainfo=Atualizar informação de mídia do(s) filme(s) selecionado(s)
@@ -246,14 +246,14 @@ Settings.renamer.folder=Nome diretório
 Settings.renamer.file=Nome arquivo
 Settings.cleanupoptions=Opções de limpeza
 Settings.renamer.removenfo=remover todos NFOs
-# Settings.renamer.moviesetsinglemovie=Also create movieset folder for moviesets with only one movie
+Settings.renamer.moviesetsinglemovie=Criar coleção para coleções com um único filme
 Settings.example=Exemplo
 Settings.imagecacheimport=Criar cache de imagem na importação
 Settings.imagecacheimporthint=Atenção\: isto pode demorar. Funciona somente se o cache de imagem estiver habilitado
 Settings.devicename=Nome do dispositivo
 Settings.macaddress=MAC address
 
-# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movieset title (sort title)\r\n$N \= Movieset title\r\n$I \= IMDB number\r\n$C \= Certification\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format\r\n$F \= video format
+Settings.movie.renamer.info=Padrões disponíveis\:\n$T \= Título\n$O \= Título Original\n$1 \= primeira letra do título\n$E \= título da listagem\n$2 \= primeira letra do título da listagem\n$Y \= Ano\n$M \= Título da coleção (título da listagem)\n$N \= Título da coleção\n$I \= Número IMDB\n$C \= Certificação\n$R \= Resolução\n$A \= codec de áudio + canais\n$V \= codec de vídeo + formato\n$F \= formato de vídeo
 Settings.movie.renamer.example=Escolha um arquivo e padrão p/ renomear\nSe o campo estiver em branco, não serão renomeados
 Settings.movie.renamer.nomovie=pelo menos um filme é necessário como exemplo
 Settings.movie.renamer.spacesubstitution=Substituir espaços por
@@ -265,6 +265,11 @@ Settings.tvshow.renamer.example=A Fazer
 Settings.tvshowdatasource=Fonte de programa de Tv
 Settings.tvshowdatasource.folderchooser=Adicionar fonte de programa de Tv
 Settings.tvshowdatasource.remove.info=Se você remover %s da sua origem de dados, todos os Programas de TV e episódios neste caminho também serão removidos. Continuar?
+Settings.tvshowseasontofilename=adicionar temporada ao nome
+Settings.tvshowtofilename=adicionar Programa ao nome
+Settings.tvshowepisodetofilename=adicionar episódio ao nome
+Settings.tvshowseasonfoldername=nome diretório temporada
+Settings.tvshowseasonhint=$1 - Número da temporada\n$2 - Número da temporada com 2 dígitos
 
 # tv shows
 tvshow.scrape.newitems=Buscar novos itens
@@ -284,7 +289,7 @@ tvshow.update=Atualizar o(s) Programa(s) de TV selecionado(s)
 tvshow.rewritenfo=Reescrever NFO p/ Programa(s) de Tv selecionado(s)
 tvshow.rename=Renomear/limpar programa(s) de TV selecionado(s)
 tvshow.clearimagecache=Limpar cache de imagem para o(s) Programa(s) de TV/Episódio(s) selecionado(s)
-# tvshow.renamer.failedrename=Failed to rename episode {} - invalid season and/or episode number
+tvshow.renamer.failedrename=Falha ao renomear episódio {} - número de temporada e/ou episódio inválido
 
 tvshowepisode.scrape=Pesquisar dados do episódio
 tvshowepisode.clone=Duplicar episódio
@@ -297,6 +302,7 @@ metatag.actors=Atores
 metatag.aired=Aired
 metatag.artwork=Artwork
 metatag.audio=Áudio
+metatag.audiocodec=Codec de Áudi
 metatag.cast=Elenco
 metatag.certification=Certificação
 metatag.codec=Codec
@@ -354,6 +360,7 @@ metatag.tvshows=Programas de TV
 metatag.trailer=Trailer
 metatag.url=Url
 metatag.video=Vídeo
+metatag.videocodec=Codec de Vídeo
 metatag.watched=Assistido
 metatag.writer=Escritor
 metatag.year=Ano
