added popupmenu for moviesets

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -90,7 +90,7 @@ movie.notinmovieset=Movies not in a movieset
 movie.change=Change movie
 
 movieset.add.desc=Add a movie set
-movieset.remove.desc=Remove selected movie set
+movieset.remove.desc=Remove selected movie set(s)
 movieset.title=Movieset title:
 movieset.search=Search TMDB for movieset metadata
 movieset.tmdb.find=Find TmdbId
