--- a/src/messages.properties
+++ b/src/messages.properties
@@ -253,7 +253,7 @@ Settings.imagecacheimporthint=Attention: this may take a while. Works only if th
 Settings.devicename=Device name
 Settings.macaddress=MAC address
 
-Settings.movie.renamer.info=Available pattern:\r\n$T = Title\r\n$O = OriginalTitle\r\n$1 = first letter of the title\r\n$E = Sort title\r\n$2 = first letter of sort title\r\n$Y = Year\r\n$M = Movieset title (sort title)\r\n$N = Movieset title\r\n$I = IMDB number\r\n$C = Certification\r\n$R = Video resolution\r\n$A = audio code + channels\r\n$V = video code + format\r\n$F = video format
+Settings.movie.renamer.info=Available pattern:\r\n$T = Title\r\n$O = OriginalTitle\r\n$1 = first letter of the title\r\n$E = Sort title\r\n$2 = first letter of sort title\r\n$Y = Year\r\n$M = Movieset title (sort title)\r\n$N = Movieset title\r\n$I = IMDB number\r\n$C = Certification\r\n$R = Video resolution\r\n$A = audio code + channels\r\n$V = video code + format\r\n$F = video format\r\n\r\n{} = optional replacement\r\n eg: {Year $Y} -> "Year 2013" if $Y is not empty\r\n if $Y is empty (or no $x replacement inside)\r\n the complete tag is empty
 Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nIf fields are empty, the renaming will be skipped!
 Settings.movie.renamer.nomovie=at least one movie is needed for the example
 Settings.movie.renamer.spacesubstitution=Replace spaces with
