--- a/src/messages.properties
+++ b/src/messages.properties
@@ -223,6 +223,8 @@ Settings.movieset.folderchooser=select movieset artwork folder
 Settings.getfromTMDB=Plot/Title/Tagline from TMDB
 Settings.preferredLanguage=Preferred language
 Settings.certificationCountry=Certification country
+Settings.scraperTreshold=Score threshold
+Settings.scraperTreshold.hint=This is an indicator of how similar the search query and the results are.\r\nThe automatic scraper will ignore search result scores below the threshold.\r\nBE AWARE: setting the threshold too low will result in false positives!\r\n\r\n1 = 100% the same\r\n0.75 = default\r\n0 = they are completely different
 Settings.default.autoscrape=automatically scrape images (without selection)
 
 # movie settings
