some UI enhancements for TV shows

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -385,6 +385,7 @@ mediafiletype.extrafanart=Extrafanart
 mediafiletype.graphic=Graphic
 mediafiletype.movie=Movie
 mediafiletype.episode=Episode
+mediafiletype.season_poster=Season poster
 
 chooser.nothingfound=nothing found
 chooser.scrapeing=scraping:
