small enchancement to the filter panel

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -398,6 +398,7 @@ moviechooser.search=Search movie
 tvshowchooser.search=Search TV show
 tvshowepisodechooser.search=Search episode
 
+movieextendedsearch.filter=Filter
 movieextendedsearch.options=Extended filter and sort options
 movieextendedsearch.filterby=filter by
 movieextendedsearch.duplicates=Show duplicates
