--- a/src/messages.properties
+++ b/src/messages.properties
@@ -410,6 +410,7 @@ movieextendedsearch.movieset=Movies in movieset
 movieextendedsearch.sortby=sort by
 movieextendedsearch.missingmetadata=Missing metadata
 movieextendedsearch.missingartwork=Missing artwork
+movieextendedsearch.missingsubtitles=Missing subtitles
 
 logwindow.title=Error logs
 summarywindow.title=Summary
