--- a/src/messages.properties
+++ b/src/messages.properties
@@ -106,9 +106,11 @@ movieset.movie.movedown=Move marked movie down
 movieset.save.desc=Save movie set metadata
 
 cast.actor.add=Add a new Actor
-cast.actor.remove=Remove Actor
+cast.actor.remove=Remove selected Actor
 cast.actor.unknown=unknown actor
 cast.role.unknown=unknown role
+cast.producer.add=Add a new Producer
+cast.producer.remove=Remove selected Producer
 
 scraper=Scraper
 scraper.metadata.select=Select metadata to be scraped
@@ -309,6 +311,7 @@ metatag.cast=Cast
 metatag.certification=Certification
 metatag.codec=Codec
 metatag.country=Country
+metatag.crew=Crew
 metatag.datasource=Datasource
 metatag.dateadded=Date Added
 metatag.details=Details
@@ -335,6 +338,7 @@ metatag.originaltitle=Original Title
 metatag.path=Path
 metatag.plot=Plot
 metatag.production=Production
+metatag.producers=Producers
 metatag.premiered=Premiered
 metatag.quality=Quality
 metatag.rating=Rating
