added ordering of (Movie)actors/producers

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -84,6 +84,11 @@ movie.export=Export selected movie(s)
 
 movie.edit=Edit movie
 movie.edit.abortqueue.desc=Abort editing all selected movies
+movie.edit.moveactorup=Move selected actor up
+movie.edit.moveactordown=Move selected actor down
+movie.edit.moveproducerup=Move selected producer up
+movie.edit.moveproducerdown=Move selected producer down
+
 
 movie.inmovieset=Movies in a movieset
 movie.notinmovieset=Movies not in a movieset
