added fanart.tv for tv shows added apifanarttv 1.5

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -209,6 +209,7 @@ Settings.languagehint=The language will be changed after restart!
 
 # image settings
 Settings.poster=Poster and Fanart
+Settings.images=Images
 Settings.source=Source
 Settings.fanarttv.alert=Attention: Fanart.tv does not provide poster
 Settings.moviefilename=<movie filename>
