externalized some strings

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -234,6 +234,7 @@ Settings.certificationCountry=Certification country
 Settings.scraperTreshold=Score threshold
 Settings.scraperTreshold.hint=This is an indicator of how similar the search query and the results are.\r\nThe automatic scraper will ignore search result scores below the threshold.\r\nBE AWARE: setting the threshold too low will result in false positives!\r\n\r\n1 = 100% the same\r\n0.75 = default\r\n0 = they are completely different
 Settings.default.autoscrape=automatically scrape images (without selection)
+Settings.automaticscraper=Automatic scraper
 
 # movie settings
 Settings.movie.datasource=Datasources
@@ -280,6 +281,7 @@ Settings.tvshowtofilename=add TV show name to filename
 Settings.tvshowepisodetofilename=add episode title to filename
 Settings.tvshowseasonfoldername=season folder name
 Settings.tvshowseasonhint=$1 - Season number\n$2 - Season number with at least 2 digits
+Settings.separator=Separator
 
 # tv shows
 tvshow.scrape.newitems=Scrape new items
