addded new movies/episodes filter

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -423,6 +423,8 @@ movieextendedsearch.sortby=sort by
 movieextendedsearch.missingmetadata=Missing metadata
 movieextendedsearch.missingartwork=Missing artwork
 movieextendedsearch.missingsubtitles=Missing subtitles
+movieextendedsearch.newmovies=New movies
+movieextendedsearch.newepisodes=New episodes
 
 logwindow.title=Error logs
 summarywindow.title=Summary
