added several more fields to be translateable

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -46,6 +46,16 @@ tmm.donate=Donate
 tmm.searchfield=Search...
 tmm.errorlogs=Show error log
 tmm.wakeonlandevice=Wake on LAN device
+tmm.wakeonlan=Wake on LAN
+tmm.version=Version
+tmm.builddate=Build date
+tmm.homepage=Homepage
+tmm.thanksto=Thanks to
+tmm.of=of
+tmm.nfo=NFO
+tmm.images=Images
+tmm.trailer=Trailer
+tmm.subtitles=Subtitles
 
 status.activethreads=active threads
 status.queuesize=Queue:
@@ -226,6 +236,10 @@ Settings.movieset.store=Store movieset artwork in a separate folder
 Settings.movieset.foldername=Folder name
 Settings.movieset.buttonselect=Select folder
 Settings.movieset.folderchooser=select movieset artwork folder
+Settings.image.small=Small
+Settings.image.medium=Medium
+Settings.image.big=Big
+Settings.image.large=Large
 
 # scraper settings
 Settings.getfromTMDB=Plot/Title/Tagline from TMDB
