--- a/src/messages.properties
+++ b/src/messages.properties
@@ -269,6 +269,8 @@ Settings.sorting.info=Choose prefixes, which will affect the sort order of the l
 Settings.renamer=Renamer
 Settings.renamer.folder=Folder name
 Settings.renamer.file=File name
+Settings.renamer.asciireplacement=Replace non ASCII characters with their basic ASCII equivalents
+Settings.renamer.asciireplacement.hint=Examples: Ä => Ae; Ö => Oe; ß => ss; Á = > A; Æ => Ae; ...
 Settings.cleanupoptions=Cleanup options
 Settings.renamer.removenfo=remove all other NFOs
 Settings.renamer.moviesetsinglemovie=Also create movieset folder for moviesets with only one movie
@@ -279,6 +281,7 @@ Settings.devicename=Device name
 Settings.macaddress=MAC address
 Settings.movie.badwords=Bad words
 Settings.movie.badwords.hint=Bad words, which will be removed from\r\nthe detected movie name
+Settings.runtimefrommediafile=Prefer runtime from MediaInfo
 
 Settings.movie.renamer.info=Available pattern:\r\n$T = Title\r\n$O = OriginalTitle\r\n$1 = first letter of the title\r\n$E = Sort title\r\n$2 = first letter of sort title\r\n$Y = Year\r\n$M = Movieset title (sort title)\r\n$N = Movieset title\r\n$I = IMDB number\r\n$C = Certification\r\n$R = Video resolution\r\n$A = audio code + channels\r\n$V = video code + format\r\n$F = video format\r\n\r\n{} = optional replacement\r\n eg: {Year $Y} -> "Year 2013" if $Y is not empty\r\n if $Y is empty (or no $x replacement inside)\r\n the complete tag is empty
 Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nIf fields are empty, the renaming will be skipped!
