Introduce new MF type sample sample != trailer (fix video extras listing)

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -405,6 +405,7 @@ metatag.trailer=Trailer
 
 mediafiletype.unknown=Unknown
 mediafiletype.video=Video
+mediafiletype.video_extra=Video Extras
 mediafiletype.audio=Audio
 mediafiletype.subtitle=Subtitle
 mediafiletype.nfo=NFO
@@ -418,6 +419,7 @@ mediafiletype.graphic=Graphic
 mediafiletype.movie=Movie
 mediafiletype.episode=Episode
 mediafiletype.season_poster=Season poster
+mediafiletype.sample=Sample
 
 chooser.nothingfound=nothing found
 chooser.scrapeing=scraping:
