feature: support of columnhinding in the movie pane

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -253,6 +253,7 @@ Settings.automaticscraper=Automatic scraper
 # movie settings
 Settings.movie.datasource=Datasources
 Settings.movie.datasource.remove.info=If you remove %s from your datasources, all movies inside this path will be removed from the database. Continue?
+Settings.movie.visiblecolumns=Visible columns
 
 Settings.datasource.folderchooser=Add datasource
 Settings.datasource.remove=Remove datasource
